--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -142,6 +142,10 @@ $promotedBox-oldPrice-color: $grayLight;
 $promotedBox-newPrice-bg: $black;
 $promotedBox-newPrice-text: $white;
 
+$compareBar-bg: $grayDarker;
+$compareBar-btn-bg: $orange;
+$compareBarItem-btn-text: $grayDarker;
+
 $brands-bg: $white;
 $brands-line-color: $borderBottomGrayLight;
 $brands-arrow-bg: $black;
