--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -11,6 +11,7 @@ $featureBorderGrayLight: #b6b6b6;
 $borderBottomGrayLight: #e2e2e2;
 $white: #ffffff;
 $black: #000000;
+$shadow-dark: #010202;
 $grayLight: #e1e1e1;
 $grayLighter: #f4f5f7;
 $grayDarkest: #2a2a2a;
@@ -45,6 +46,8 @@ $featureBox-bg-after: $orange;
 $featureBox-content-color: $orange;
 $featureBox-border-color: $featureBorderGrayLight;
 $featureBox-border-color-after: $orange;
+
+$featureBox-text-transform-color: $grayMedium;
 
 $productBox-bg: $white;
 $productBox-border: $grayLight;
@@ -97,6 +100,12 @@ $menuBar-link-active-color: $white;
 $menuBar-link-active-border: $orange;
 $menuBar-link-border: $grayMedium;
 
+$menuBar-shadow-color: rgba($shadow-dark, 0.2);
+$menuBar-link-border-top: $white;
+$menuBar-menuButton-bg: transparent;
+$menuBar-menuButton-color: $orange;
+$menuBar-dropDownMenu-hover-bg: rgba($orange, 0.7);
+
 $topBar-bg: $grayDarker;
 $topBar-link-color: $white;
 $topBar-link-hover: $orange;
@@ -132,6 +141,10 @@ $promotedBox-icon-hover-color: $grayDarkest;
 $promotedBox-oldPrice-color: $grayLight;
 $promotedBox-newPrice-bg: $black;
 $promotedBox-newPrice-text: $white;
+
+$compareBar-bg: $grayDarker;
+$compareBar-btn-bg: $orange;
+$compareBarItem-btn-text: $grayDarker;
 
 $brands-bg: $white;
 $brands-line-color: $borderBottomGrayLight;
