Add TopSeller and update styles for Button component

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -180,6 +180,11 @@ $tableItem-link-color: $black;
 $sectionHeader-title: $orange;
 $sectionHeader-horizontal-short-line: $orange;
 
+$topSeller-sale-price: $white;
+$topSeller-sale-bg: $grayMedium;
+$topSeller-product-bg: $white;
+
+
 $tableItem-link-color: $black;
 $tableItem-active-link-color: $orange;
 $tableItem-bg: $grayLighter;
