Update TopSeller component

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -181,8 +181,9 @@ $sectionHeader-title: $orange;
 $sectionHeader-horizontal-short-line: $orange;
 
 $topSeller-sale-price: $white;
-$topSeller-sale-bg: $grayMedium;
+$topSeller-sale-bg: $grayDarkest;
 $topSeller-product-bg: $white;
+$topSeller-product-border: $grayDarkest;
 
 
 $tableItem-link-color: $black;
