--- a/src/components/views/TopSeller/TopSeller.module.scss
+++ b/src/components/views/TopSeller/TopSeller.module.scss
@@ -27,11 +27,10 @@
         line-height: 80px;
         border-radius: 50%;
         text-align: center;
-        opacity: .8;
         position: absolute;
         top: 50%;
         right: 10%;
-
+        z-index: 1;
 
         .price {
             font-size: 15px;
@@ -47,7 +46,18 @@
 
     .product {
         background-color: $topSeller-product-bg;
+        box-shadow: 1px 1px 3px $topSeller-sale-bg;
         width: 40%;
-        height: 30%;
+        height: 20%;
+        text-align: center;
+        padding: 20px 10px;
+        position: absolute;
+        top: 65%;
+        right: 0;
+
+        h5 {
+            font-size: 14px;
+            font-weight: 600;
+        }
     }
 }
