Add photo slider to TopSeller component

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -182,7 +182,8 @@ $sectionHeader-horizontal-short-line: $orange;
 
 $topSeller-sale-price: $white;
 $topSeller-sale-bg: $grayDarkest;
-$topSeller-product-bg: $white;
+$topSeller-product-bg-gradient-light: $white;
+$topSeller-product-bg-gradient-dark: $black;
 $topSeller-product-border: $grayDarkest;
 
 
