--- a/src/components/views/TopSeller/TopSeller.module.scss
+++ b/src/components/views/TopSeller/TopSeller.module.scss
@@ -28,7 +28,7 @@
         border-radius: 50%;
         text-align: center;
         position: absolute;
-        top: 50%;
+        top: 48%;
         right: 10%;
         z-index: 1;
 
@@ -45,7 +45,7 @@
     }
 
     .product {
-        background-color: $topSeller-product-bg;
+        background: repeating-linear-gradient(-45deg, $topSeller-product-bg-gradient-dark 0, $topSeller-product-bg-gradient-dark 10%, $topSeller-product-bg-gradient-light 0, $topSeller-product-bg-gradient-light 90%, $topSeller-product-bg-gradient-dark 0, $topSeller-product-bg-gradient-dark 100%);
         box-shadow: 1px 1px 3px $topSeller-sale-bg;
         width: 40%;
         height: 20%;
@@ -60,4 +60,20 @@
             font-weight: 600;
         }
     }
+}
+
+button {
+    width: 30px;
+    height: 50px;
+    color: white;
+    background-color: black;
+    border: none;
+}
+
+.imageCarousel {
+    width: 73px;
+    height: 50px;
+    margin-left: 2px;
+    margin-right: 2px;
+    object-fit: cover;
 }
