--- a/src/components/views/TopSeller/TopSeller.module.scss
+++ b/src/components/views/TopSeller/TopSeller.module.scss
@@ -32,15 +32,20 @@
         right: 10%;
         z-index: 1;
 
+        .price, .oldPrice, .slogan {
+            line-height: 1.2;
+        }
+
+        .oldPrice, .slogan {
+            font-size: 12px;
+        }
+
         .price {
             font-size: 15px;
-            line-height: 1.2;
         }
 
         .oldPrice {
             text-decoration: line-through;
-            font-size: 12px;
-            line-height: 1.2;
         }
     }
 
@@ -76,4 +81,18 @@ button {
     margin-left: 2px;
     margin-right: 2px;
     object-fit: cover;
+    position: relative;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    .layer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: .7;
+    }
 }
