--- a/src/components/features/Brands/Brands.module.scss
+++ b/src/components/features/Brands/Brands.module.scss
@@ -33,6 +33,9 @@
 }
 
 .arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   background-color: $brands-arrow-bg;
   border: none;
   color: $brands-arrow-color;
@@ -40,21 +43,39 @@
   width: 40px;
   height: 100px;
   cursor: pointer;
-  transition: color 0.3s;
+  transition: color 0.3s, background-color 0.3s;
 
   &:hover {
     color: $brands-arrow-hover-color;
   }
+
+  &.left {
+    left: 0;
+  }
+
+  &.right {
+    right: 0;
+  }
 }
 
 .brandsWrapper {
-  display: flex;
-  gap: 30px;
   overflow: hidden;
-  padding: 0 20px;
+  padding: 0;
+  position: relative;
+}
+
+.slider {
+  display: flex;
+  gap: 20px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.transition {
+  transition: transform 0.5s ease-in-out;
 }
 
 .brandBox {
+  width: 150px;
   height: 100px;
   display: flex;
   align-items: center;
