--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -12,6 +12,10 @@
     align-items: center;
     position: relative;
 
+    .categorySelect {
+      font-size: 14px;
+    }
+
     .icon:first-child {
       color: $primary;
       position: absolute;
@@ -31,7 +35,7 @@
       list-style-type: none;
     }
 
-    ul { 
+    ul {
       padding: 0;
       margin: 0;
       padding: 15px 50px 0 50px;
@@ -42,7 +46,7 @@
         padding-bottom: 8px;
         display: flex;
         align-items: center;
-  
+
         span {
           padding-right: 25px;
         }
@@ -65,7 +69,7 @@
           li {
             padding: 10px 70px;
             cursor: pointer;
-          
+
             &:hover {
               background-color: $primary;
             }
@@ -74,7 +78,7 @@
       }
     }
   }
-  
+
   .category:hover .categorySelect {
     color: $primary;
     transition: 0.1s;
@@ -92,14 +96,71 @@
       outline: none;
 
       &::placeholder {
-        color: $text-color;
+        color: $productSearch-text-color;
       }
     }
 
     button {
       border: 0;
-      background-color: transparent;
+      background-color: $productSearch-button-bg;
       outline: none;
+    }
+  }
+}
+
+@media (min-width: 500px) and (max-width: 768px) {
+  .root {
+
+    .category {
+      font-size: 12px;
+    }
+
+    .category ul li {
+      position: relative;
+
+      ul {
+        position: absolute;
+        left: -50px;
+        top: 80%;
+        width: 195px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .root {
+    flex-direction: column;
+    width: 180px;
+    height: 90px;
+
+    .category {
+      width: 100%;
+      height: 45px;
+      border-right: 0;
+      border-bottom: 1px solid $form-border-color;
+      font-size: 14px;
+    }
+
+    .category ul li {
+      position: relative;
+
+      ul {
+        position: absolute;
+        left: -50px;
+        top: 80%;
+        width: 180px;
+      }
+    }
+
+    .searchField {
+      width: 100%;
+      height: 45px;
+    }
+
+    input {
+      width: 100%;
     }
   }
 }
