--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -1,12 +1,9 @@
 @import "../../../styles/settings.scss";
 
 .root {
-  box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
-  background-color: #ffffff;
-
-  :global(.container) > :global(.row) {
-    height: 84px;
-  }
+  box-shadow: 2px 3.464px 6px $menuBar-shadow-color;
+  background-color:$menuBar-bg;
+  position: relative;
 
   .menu {
     display: flex;
@@ -16,6 +13,7 @@
       margin: 0;
       padding: 0;
       display: flex;
+      height: 84px;
 
       li {
         list-style: none;
@@ -25,31 +23,80 @@
     }
 
     a {
-      color: $text-color;
+      color: $menuBar-link-color;
       text-transform: uppercase;
       font-size: 12px;
       padding: 1rem;
       text-decoration: none;
       display: flex;
       align-items: center;
-      border-top: 4px solid #ffffff;
+      border-top: 4px solid $menuBar-link-border-top;
       font-weight: 500;
       letter-spacing: 1px;
 
-      &:hover{
+      &:hover {
         @extend %hover-animation;
         @extend .hover-text;
         @extend .hover-background;
       }
-      &.active {
-        background-color: $primary;
-        color: #ffffff;
-        border-color: $primary;
-      }
 
       &.active {
-        border-color: $text-color;
+        background-color: $menuBar-link-active-bg;
+        color: $menuBar-link-active-color;
+        border-color: $menuBar-link-border;
       }
+    }
+  }
+}
+
+.menuButton {
+  background: $menuBar-menuButton-bg;
+  border: none;
+  margin-left: 12px;
+  font-size: 24px;
+    .mobileButton {
+      color: $menuBar-menuButton-color;
+    }
+}
+
+.dropdownMenu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: $menuBar-bg;
+  z-index: 1000;
+  box-shadow: 0 4px 8px $menuBar-shadow-color;
+}
+
+.dropdownMenu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    border-bottom: 1px solid $menuBar-link-border;
+
+    &:last-of-type {
+      border-bottom: none;
+    }
+  }
+
+  li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    color: $menuBar-link-color;
+
+    &:hover {
+      background-color: $menuBar-dropDownMenu-hover-bg;
+    }
+
+    &.active {
+      background-color: $menuBar-link-active-bg;
+      color: $menuBar-link-active-color;
+      border-color: $menuBar-link-border;
     }
   }
 }
