Add Slider component and update TopSeller component

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -197,6 +197,9 @@ $compareBar-bg: $grayDarker;
 $compareBar-btn-bg: $orange;
 $compareBarItem-btn-text: $grayDarker;
 
+$slider-btn-bg: $black;
+$slider-btn-icon-color: $white;
+
 $brands-bg: $white;
 $brands-line-color: $borderBottomGrayLight;
 $brands-arrow-bg: $black;
