Update style for Slider

--- a/src/components/common/Slider/Slider.module.scss
+++ b/src/components/common/Slider/Slider.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/settings.scss";
 
 .sliderBtn {
-    width: 30px;
+    width: auto;
     height: auto;
     color: $slider-btn-icon-color;
     background-color: $slider-btn-bg;
