--- a/src/components/features/Brands/Brands.module.scss
+++ b/src/components/features/Brands/Brands.module.scss
@@ -89,3 +89,57 @@
     object-fit: contain;
   }
 }
+
+/* Animacje przesuwania */
+
+@keyframes slideOutLeft {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideOutRight {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.slideOutLeft {
+  animation: slideOutLeft 0.3s forwards;
+}
+
+.slideInRight {
+  animation: slideInRight 0.3s forwards;
+}
+
+.slideOutRight {
+  animation: slideOutRight 0.3s forwards;
+}
+
+.slideInLeft {
+  animation: slideInLeft 0.3s forwards;
+}
