--- a/src/components/views/Gallery/Gallery.module.scss
+++ b/src/components/views/Gallery/Gallery.module.scss
@@ -1,2 +1,45 @@
 @import "../../../styles/settings.scss";
 
+.advertWrapper {
+    position: relative;
+
+    .advertImage {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .advertItem {
+        position: absolute;
+        top: 25%;
+        left: 20%;
+
+        h4 {
+            text-transform: uppercase;
+            font-weight: bold;
+            color: $gallery-text-light;
+            text-shadow: 1px 1px 2px $gallery-text-dark;
+
+            span {
+                font-size: 40px;
+                padding-left: 10px;
+                color: $gallery-text-grass;
+            }
+        }
+
+        h2 {
+            color: $gallery-text-orange;
+            font-size: 45px;
+            text-shadow: 1px 1px 1px $gallery-text-dark;
+            padding-bottom: 20px;
+            font-weight: 600;
+        }
+
+        a {
+            background-color: $gallery-text-grass;
+            padding: 15px 20px;
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+    }
+}
