--- a/src/components/views/TopSeller/TopSeller.module.scss
+++ b/src/components/views/TopSeller/TopSeller.module.scss
@@ -13,7 +13,7 @@
         position: absolute;
         top: 30%;
 
-        > div {
+        > * {
             margin-bottom: 5px;
         }
 
@@ -27,8 +27,8 @@
                 font-size: 10px;
                 top: 0;
                 left: 38px;
-                background-color: black;
-                color: white;
+                background-color: $topSeller-tooltip-bg;
+                color: $topSeller-tooltip-color;
                 padding: 3px 8px;
                 border-radius: 4px;
                 white-space: nowrap;
@@ -42,7 +42,7 @@
                 transform: translateY(-50%);
                 border-width: 5px;
                 border-style: solid;
-                border-color: transparent black transparent transparent;
+                border-color: transparent $topSeller-tooltip-bg transparent transparent;
             }
         }
     }
