Update styles for SectionHeader and Gallery components

--- a/src/components/common/SectionHeader/SectionHeader.module.scss
+++ b/src/components/common/SectionHeader/SectionHeader.module.scss
@@ -2,6 +2,7 @@
 
 .heading {
     position: relative;
+    border-bottom: 4px solid $sectionHeader-horizontal-long-line;
 
     h3 {
       color: $sectionHeader-title;
