--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -185,6 +185,7 @@ $gallery-text-grass: $green;
 
 $sectionHeader-title: $orange;
 $sectionHeader-horizontal-short-line: $orange;
+$sectionHeader-horizontal-long-line: $borderBottomGrayLight;
 
 $topSeller-sale-price: $white;
 $topSeller-sale-bg: $grayDarkest;
