Update initialState, add alertReducer, compareReducer and compareFullReducer, update Homepage, ProductBox, NewFurniture, CompareBar and CompareBarItem components, add CompareBtn component

--- a/src/components/features/CompareBarItem/CompareBarItem.module.scss
+++ b/src/components/features/CompareBarItem/CompareBarItem.module.scss
@@ -3,7 +3,7 @@
 .imageWrapper {
     position: relative;
     height: 150px;
-    width: 350px;
+    width: 100px;
 
     &:hover .imageBtn {
         display: block;
@@ -12,6 +12,7 @@
     img {
         height: 100%;
         width: 100%;
+        object-fit: cover;
     }
 }
 
