--- a/src/components/common/PromotedBox/PromotedBox.module.scss
+++ b/src/components/common/PromotedBox/PromotedBox.module.scss
@@ -47,10 +47,13 @@
 .imageWrapper {
   position: relative;
   width: 100%;
+  height: 300px;
   overflow: hidden;
 
   img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     display: block;
   }
 
@@ -176,7 +179,7 @@
     .oldPrice {
       text-decoration: line-through;
       color: $promotedBox-oldPrice-color;
-      font-size: 0.9rem;
+      font-size: 1rem;
     }
 
     .newPrice {
