--- a/src/components/features/Featured/Featured.module.scss
+++ b/src/components/features/Featured/Featured.module.scss
@@ -14,6 +14,16 @@
   overflow: hidden;
 }
 
+.featuredContent {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 1;
+}
+
 .overlay {
   position: absolute;
   left: 0;
@@ -21,13 +31,13 @@
   top: 25%;
   height: 50%;
   background-color: rgba($featured-overlay-bg, 0.4);
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   color: $featured-overlay-text-color;
+  z-index: 2;
 
   h2 {
     font-size: 2rem;
@@ -66,6 +76,7 @@
   transform: translateX(-50%);
   display: flex;
   width: 100%;
+  z-index: 3;
 
   button {
     width: 50%;
@@ -108,4 +119,14 @@
   .active {
     background-color: $promotedBox-dots-active;
   }
+}
+
+.fadeIn {
+  opacity: 1;
+  transition: opacity $hover-animation-time ease-in-out;
+}
+
+.fadeOut {
+  opacity: 0;
+  transition: opacity $hover-animation-time ease-in-out;
 }
