Fix Shop now button size

--- a/src/components/features/Featured/Featured.module.scss
+++ b/src/components/features/Featured/Featured.module.scss
@@ -54,6 +54,8 @@
   }
 
   .shopNow {
+    width: 150px;
+    height: 60px;
     background-color: $featured-shopNow-bg;
     color: $featured-shopNow-text-color;
     border: none;
