--- a/src/components/views/WelcomeUserText/WelcomeUserText.module.scss
+++ b/src/components/views/WelcomeUserText/WelcomeUserText.module.scss
@@ -1,6 +1,8 @@
 @import "../../../styles/settings.scss";
 
 .welcome {
+  color: $topBar-link-hover;
+  
     span {
         font-weight: 700;
     }
