Add using Swipeable component to Featured right slider

--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    z-index: 999;
 
     .categorySelect {
       font-size: 14px;
