Add CompareBtn component to TopSeller component, update styles for CompareBar component

--- a/src/components/features/CompareBar/CompareBar.module.scss
+++ b/src/components/features/CompareBar/CompareBar.module.scss
@@ -11,9 +11,11 @@
         background-color: $compareBar-btn-bg;
         font-weight: bold;
         text-transform: uppercase;
+        padding: 10px 20px;
 
         &:hover {
             text-decoration: none;
+            color: $compareBarItem-btn-text;
         }
     }
 }
