--- a/src/components/features/CompareBar/CompareBar.module.scss
+++ b/src/components/features/CompareBar/CompareBar.module.scss
@@ -6,6 +6,7 @@
     left: 0;
     right: 0;
     background-color: $compareBar-bg;
+    z-index: 10;
 
     .compareBtn {
         background-color: $compareBar-btn-bg;
