feature/WDP2501-25 fix: Improved text visibility on images in Deals section

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -92,6 +92,10 @@ $topBar-link-color: $white;
 $topBar-link-hover: $orange;
 $form-border-color: #292929;
 
+$deals-background: $grayDark;
+$deals-text-color: $white;
+$deals-highlight-color: $orange;     
+
 // ANIMATIONS
 
 // Animation time for different effects
