Add fade effect to TabContent and TopSeller components

--- a/src/components/common/TabContent/TabContent.module.scss
+++ b/src/components/common/TabContent/TabContent.module.scss
@@ -2,4 +2,10 @@
 
 .activeTabContent {
     background-color: $tabContent-bg;
+    opacity: 1;
+    transition: all $hover-animation-time ease-in-out;
+}
+
+.fadeOut {
+    opacity: 0;  
 }
