--- a/src/components/features/NewFurniture/NewFurniture.module.scss
+++ b/src/components/features/NewFurniture/NewFurniture.module.scss
@@ -105,7 +105,7 @@
 }
 
 .productsWrapper{
-  transition: all $hover-animation-time ease-in-out;
+  transition: all $hover-animation-time ease;
 }
 
 .fadeOut {
