--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -270,3 +270,17 @@ $hover-background-color: $primary;
     transition: transform $hover-animation-time ease-in-out;
   }
 }
+
+@keyframes fade {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
