--- a/src/components/views/TabContentItem/TabContentItem.module.scss
+++ b/src/components/views/TabContentItem/TabContentItem.module.scss
@@ -138,3 +138,71 @@
         }
     }
 }
+
+@media (max-width: 400px), (min-width: 768px) and (max-width: 991px) {
+    .photo {
+        .outlines {
+            top: 20%;
+        }
+
+        .sale {
+            width: 60px;
+            height: 60px;
+            line-height: 60px;
+            top: 46%;
+            padding-top: 15px;
+
+            .price {
+                font-size: 13px;
+            }
+
+            .oldPrice, .slogan {
+                font-size: 10px;
+            }
+        }
+
+        .product {
+            width: 50%;
+            height: 25%;
+
+            h5 {
+                font-size: 10px;
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
+@media (min-width: 400px) and (max-width: 500px) {
+    .photo {
+        .outlines {
+            top: 20%;
+        }
+
+        .sale {
+            width: 60px;
+            height: 60px;
+            line-height: 60px;
+            top: 50%;
+            padding-top: 15px;
+
+            .price {
+                font-size: 13px;
+            }
+
+            .oldPrice, .slogan {
+                font-size: 10px;
+            }
+        }
+
+        .product {
+            width: 50%;
+            height: 25%;
+
+            h5 {
+                font-size: 10px;
+                margin-bottom: 0;
+            }
+        }
+    }
+}
