--- a/src/components/layout/Deals/Deals.module.scss
+++ b/src/components/layout/Deals/Deals.module.scss
@@ -1,11 +1,31 @@
 @import "../../../styles/settings.scss";
 
+.root {
+  padding-bottom: 5rem;
+}
+
 .dealRow {
   display: flex;
-  height: 400px;
   gap: 20px;
-  margin-bottom: 5rem;
-  min-width: 360px;
+  height: 500px;
+  flex-direction: row;
+
+  @media (max-width: 1200px) {
+    height: 450px;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    height: 550px;
+  }
+
+  @media (max-width: 576px) {
+    height: 500px;
+  }
+
+  @media (max-width: 360px) {
+    height: 700px;
+  }
 }
 
 .photo {
@@ -13,6 +33,8 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  height: 50%;
+  width: 100%;
 
   &::after {
     content: "";
@@ -25,45 +47,82 @@
   }
 }
 
+.bigDealContainer {
+  height: 100%;
+
+  @media (max-width: 768px) {
+    height: 30%;
+  }
+
+  .dealDescryption {
+    top: 40%;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      top: 30%;
+    }
+
+    @media (max-width: 576px) {
+      top: 40%;
+    }
+
+    @media (max-width: 360px) {
+      top: 40%;
+    }
+  }
+}
+
+.smallDealContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 20px;
+  @media (max-width: 768px) {
+    height: calc(60% + 20px);
+  }
+
+  .dealDescryption {
+    top: 45%;
+  }
+}
+
 .dealDescryption {
   position: relative;
   color: $deals-text-color;
-  margin-top: 2.5rem;
   text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8);
 
   p {
     z-index: 1;
     position: absolute;
-    top: 1.5rem;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 5px 0;
-    font-size: 22px;
+    font-size: 26px;
     letter-spacing: 1px;
     text-align: center;
 
     @media (max-width: 768px) {
       font-size: 16px;
-      top: 1rem;
     }
 
     @media (max-width: 576px) {
-      font-size: 10px;
-      top: -0.5rem
+      font-size: 16px;
     }
   }
 
   p + p {
-    top: 5rem;
+    top: 75px;
+    padding: 3px;
     border: 2px solid white;
+
     @media (max-width: 768px) {
-      font-size: 16px;
-      top: 4rem;
+      font-size: 20px;
+      top: 50px;
     }
 
     @media (max-width: 576px) {
-      font-size: 10px;
-      top: 2rem
+      font-size: 16px;
+      top: 40px;
     }
   }
 
@@ -74,25 +133,25 @@
   p .bold {
     font-weight: 700;
     font-size: 22px;
+
     @media (max-width: 768px) {
       font-size: 18px;
     }
     @media (max-width: 576px) {
-      font-size: 10px;
+      font-size: 18px;
     }
-
   }
 
   p .thin {
     font-weight: 300;
     font-size: 16px;
+
     @media (max-width: 768px) {
       font-size: 14px;
     }
     @media (max-width: 576px) {
-      font-size: 10px;
+      font-size: 14px;
     }
-
   }
 
   p .changeColor {
@@ -104,39 +163,9 @@
     font-size: 20px;
     font-weight: 700;
     color: $deals-highlight-color;
+
     @media (max-width: 768px) {
-      font-size: 14px;
+      font-size: 18px;
     }
-
-  }
-}
-
-.smallContainer {
-  gap: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-@media (max-width: 1200px) {
-  .dealRow {
-    height: 300px;
-  }
-}
-
-@media (max-width: 768px) {
-  .dealRow {
-    height: 250px;
-  }
-}
-
-@media (max-width: 576px) {
-  .dealRow {
-    height: 200px;
-  }
-}
-
-@media (max-width: 360px) {
-  .dealRow {
-    height: 150px;
   }
 }
