Update styles for nav-tab in bootstrap.scss

--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -17,3 +17,9 @@
     display: block;
     background-color: $tabContent-bg;
 }
+
+@media (max-width: 500px) {
+    .nav-tabs .nav-link {
+        font-size: 8px;
+    }
+}
