--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -18,7 +18,7 @@
     background-color: $tabContent-bg;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 500px), (min-width: 768px) and (max-width: 991px) {
     .nav-tabs .nav-link {
         font-size: 8px;
     }
