bugfix/RWD-topBar and Footer

--- a/src/components/layout/CompanyClaimHorizontal/CompanyClaimHorizontal.module.scss
+++ b/src/components/layout/CompanyClaimHorizontal/CompanyClaimHorizontal.module.scss
@@ -2,20 +2,55 @@
 @import "../CompanyClaim/CompanyClaim.module.scss";
 
 .root {
-  min-width: 420px;
-  overflow: hidden;
+  min-width: 320px;
+}
 
-  img {
-    margin-bottom: -40px;
-  }
+.wrapper {
+  padding: 1rem 10px 1rem 0;
+}
 
-  .phoneNumber p{
+img {
+  margin-bottom: -40px;
+}
+
+.phoneNumber {
+  padding-right: 50px;
+  margin-top: 5px;
+  p {
     font-size: 14px;
-    padding-bottom: 15px;
-    margin-right: 30px;
+    text-align: right;
+  }
+}
+
+@media (max-width: 568px) {
+  img {
+    margin-bottom: -30px;
+  }
+  .phoneNumber {
+    p {
+      .icon {
+        margin-right: 0.2rem;
+        font-size: 28px;
+      }
+    }
+  }
+}
+
+@media (max-width: 420px) {
+  img {
+    width: 80%;
   }
 
-  .cart {
-    margin-top: 20px;
+  .phoneNumber {
+    p {
+      .icon {
+        margin-right: 0.1rem;
+        font-size: 24px;
+      }
+    }
+  }
+
+  .cart{
+    padding-right: 70px;
   }
 }
