--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -1,79 +1,78 @@
 @import "../../../styles/settings.scss";
 
 .root {
-  min-width: 420px;
   background-color: $header-bg;
   overflow: hidden;
 
   :global(.container) > :global(.row) {
     height: 145px;
   }
+}
 
-  .phoneNumber {
-    p {
-      margin: 0;
-      font-size: 17px;
-      line-height: 42px;
-      color: rgb(216, 216, 216);
-      font-weight: 500;
-      @media (max-width: 460px) {
-        font-size: 14px;
-      }
+.bazarImg img {
+  margin-bottom: 10px;
+}
+
+.phoneNumber {
+  p {
+    margin: 0;
+    font-size: 17px;
+    line-height: 42px;
+    font-weight: 500;
+    color: rgb(216, 216, 216);
+
+    .icon {
+      font-size: 32px;
+      color: $primary;
+      margin-right: 0.8rem;
+      margin-top: -3px;
+      vertical-align: middle;
+    }
+  }
+}
+
+.cart {
+  padding-right: 50px;
+
+  .cartBox {
+    position: relative;
+    display: inline-block;
+    color: #ffffff;
+
+    .cartIcon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 55px;
+      height: 50px;
+      font-size: 20px;
+      background-color: $primary;
+      border-radius: 3px;
+
       .icon {
-        font-size: 32px;
-        color: $primary;
-        vertical-align: middle;
-        margin-top: -3px;
-        margin-right: 0.8rem;
+        margin-right: 5px;
       }
     }
   }
 
-  .cart {
-    padding-right: 50px;
+  .cartCounter {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 27px;
+    font-size: 14px;
+    color: rgb(224, 227, 237);
+    background-color: $header-bg;
+    border-radius: 14px;
+    transform: translate(50%, -50%);
+  }
 
-    .cartBox {
-      display: inline-block;
-      position: relative;
-      color: #ffffff;
-
-      .cartIcon {
-        background-color: $primary;
-        width: 55px;
-        height: 50px;
-        border-radius: 3px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-
-        .icon {
-          margin-right: 5px;
-        }
-      }
-    }
-    
-    .cartCounter {
-      width: 28px;
-      height: 27px;
-      border-radius: 14px;
-      background-color: $header-bg;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-      color: rgb(224, 227, 237);
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translate(50%, -50%);
-    }
-
-    &:hover {
-      .cartIcon {
-        @extend %hover-animation;
-        background-color: lighten($hover-background-color, 10%);
-      }
-    }
+  &:hover .cartIcon {
+    @extend %hover-animation;
+    background-color: lighten($hover-background-color, 10%);
   }
 }
