--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -9,20 +9,20 @@
 
     .menuWrapper {
       h6 {
-        color: #ffffff;
+        color: $footer-menu-title-color;
         text-transform: uppercase;
-        margin: 0 0 1rem 0;
+        margin-bottom: 1rem;
       }
 
       ul {
-        margin: 0 0 1.5rem 0;
+        margin-bottom: 1.5rem;
         padding: 0;
         list-style: none;
         li {
           a {
             font-size: 14px;
             line-height: 30px;
-            color: rgb(169, 169, 169);
+            color: $footer-bottom-text-color;
 
             &:hover {
               @extend %hover-animation;
@@ -57,30 +57,30 @@
     .copyright {
       p {
         margin: 0;
-        color: rgb(169, 169, 169);
+        color: $footer-bottom-text-color;
         font-size: 14px;
         line-height: 26px;
       }
     }
 
     .socialMedia {
+      @media (max-width: 576px) {
+        margin: 0;
+        padding: 0;
+      }
       ul {
-        margin: 0 -40px 0 0;
         padding: 0;
         list-style: none;
-        @media (max-width:768px){
-          padding-right: 1.5rem;
-        }
-
+        
         li {
           display: inline-block;
           margin-left: 1rem;
           @media (max-width:768px){
-            margin: 0.3rem 1.5rem 0.5rem 0;
+            margin: 0.3rem 1.5rem 0.3rem 0;
           }
 
           a {
-            color: rgb(169, 169, 169);
+            color: $footer-bottom-link-color;
             text-decoration: none;
             @media(max-width: 768px){
               font-size: 25px;
