--- a/src/components/common/TabItem/TabItem.module.scss
+++ b/src/components/common/TabItem/TabItem.module.scss
@@ -5,5 +5,6 @@
         color: $tableItem-link-color;
         text-transform: uppercase;
         font-weight: 600;
+        line-height: 28px;
     }
 }
