Update rwd styles for CompareBarItem, CompareBar components and img-thumbnail in bootstrap.scss

--- a/src/components/features/CompareBar/CompareBar.module.scss
+++ b/src/components/features/CompareBar/CompareBar.module.scss
@@ -20,3 +20,11 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .compareBar {
+        .compareBtn {
+            padding: 4px 8px;
+        }
+    }
+}
