--- a/src/components/features/CompareBarItem/CompareBarItem.module.scss
+++ b/src/components/features/CompareBarItem/CompareBarItem.module.scss
@@ -31,3 +31,38 @@
         text-decoration: none;
     }
 }
+
+@media (max-width: 449px) {
+    .imageWrapper {
+        height: 50px;
+        width: 50px;
+        margin-bottom: 10px;
+        .imageBtn {
+            font-size: 1rem;
+            top: 70%;
+        }
+    }
+}
+
+@media (min-width: 450px) and (max-width: 639px) {
+    .imageWrapper {
+        height: 80px;
+        width: 80px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 640px) and (max-width: 767px) {
+    .imageWrapper {
+        height: 100px;
+        width: 100px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 1450px) and (max-width: 2000px) {
+    .imageWrapper {
+        height: 250px;
+        width: 250px;
+    }
+}
