--- a/src/components/features/NewFurniture/NewFurniture.module.scss
+++ b/src/components/features/NewFurniture/NewFurniture.module.scss
@@ -33,10 +33,20 @@
 
     .menu {
       text-align: center;
+
+      @media (max-width: 767px) {
+        margin-top: 25px;
+      }
+
+      @media (max-width: 575px) {
+        margin-top: 45px;
+      }
+
       ul {
-        margin: 0;
+        margin-left: 10px;
         padding: 0;
         list-style: none;
+
         li {
           display: inline-block;
           margin: 0 0.5rem;
@@ -74,12 +84,25 @@
       right: 0;
       top: 0;
 
+      @media (max-width: 575px) {
+        width: 100%;
+        right: auto;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 30px;
+      }
+
       ul {
+        text-align: center;
         margin: 0;
         padding: 0 0 0 1rem;
         list-style: none;
         background-color: #ffffff;
         transform: translateY(15px);
+
+        @media (max-width: 575px) {
+          padding: 0;
+        }
 
         li {
           display: inline-block;
@@ -104,7 +127,7 @@
   }
 }
 
-.productsWrapper{
+.productsWrapper {
   transition: all $hover-animation-time ease;
 }
 
